Completed structural Login form

--- a/index.html
+++ b/index.html
@@ -31,7 +31,15 @@
               <input type="text" placeholder="Username" />
               <i class="fas fa-lock"></i>
             </div>
+            <label class="remember">
+              <input type="checkbox" /> Remember Me
+            </label>
+            <div class="inputBx">
+              <input type="submit" value="Login" />
+            </div>
           </form>
+          <p>Forgot <a href="#">Password?</a></p>
+          <p>Need an <a href="#">Account?</a></p>
         </div>
       </div>
     </section>
