--- a/index.html
+++ b/index.html
@@ -16,11 +16,18 @@
     <meta name="keywords" content="Grocery Store, Food, Meals, Groceries" />
     <meta name="viewport" content="with=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles/mainstyles.css" />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.15.1/css/all.css"
+      integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
     <section id="main">
-      <div class="box">
-        <div class="form-input">
+      <div class="nav"></div>
+      <div class="input-box">
+        <div class="form">
           <h2>Sign-in</h2>
           <form>
             <div class="inputBx">
@@ -28,7 +35,7 @@
               <i class="fas fa-user"></i>
             </div>
             <div class="inputBx">
-              <input type="text" placeholder="Username" />
+              <input type="text" placeholder="Password" />
               <i class="fas fa-lock"></i>
             </div>
             <label class="remember">
@@ -42,6 +49,7 @@
           <p>Need an <a href="#">Account?</a></p>
         </div>
       </div>
+      <div class="overlay"></div>
     </section>
   </body>
 </html>
