--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp"
       crossorigin="anonymous"
     />
+    <script src="app.js" defer></script>
   </head>
   <body>
     <section id="main">
@@ -29,9 +30,9 @@
       <div class="input-box">
         <div class="form">
           <h2>Sign-in</h2>
-          <form>
+          <form id="login">
             <div class="inputBx">
-              <input type="text" placeholder="Username" />
+              <input type="text" autofocus placeholder="Username" />
               <i class="fas fa-user"></i>
             </div>
             <div class="inputBx">
