--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
               <i class="fas fa-lock"></i>
             </div>
             <label class="remember">
-              <input type="checkbox" /> Remember Me
+              <input type="checkbox" />
+              <span class="checkmark"></span>
             </label>
             <div class="inputBx">
               <input type="submit" value="Login" />
