updated check styling

--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
               <input type="text" placeholder="Password" />
               <i class="fas fa-lock"></i>
             </div>
-            <label class="remember">
+            <label class="remember"
+              >Remember Me
               <input type="checkbox" />
               <span class="checkmark"></span>
             </label>
