added animation feature to checkbox

--- a/index.html
+++ b/index.html
@@ -36,11 +36,10 @@
               <input type="text" placeholder="Password" />
               <i class="fas fa-lock"></i>
             </div>
-            <label class="remember"
-              >Remember Me
-              <input type="checkbox" />
-              <span class="checkmark"></span>
-            </label>
+            <p>
+              <input type="checkbox" id="remember" name="remember" />
+              <label for="remember">Remember Me</label>
+            </p>
             <div class="inputBx">
               <input type="submit" value="Login" />
             </div>
