created email form

--- a/password.html
+++ b/password.html
@@ -26,31 +26,29 @@
     <section id="main">
       <div class="input-box">
         <div class="form-box">
-          <h2>Sign-in</h2>
+          <h2>Forgot Password?</h2>
+          <p>
+            Enter the email you use for Grocer.com, and we'll help you create a
+            new password
+          </p>
           <form id="login" action="#" method="POST">
             <div class="inputBx">
-              <input type="text" autofocus placeholder="Username" />
-              <i class="fas fa-user"></i>
+              <input type="text" autofocus placeholder="Email" />
+              <i class="fas fa-envelope"></i>
             </div>
             <div class="inputBx">
-              <input type="text" placeholder="Password" />
-              <i class="fas fa-lock"></i>
-            </div>
-            <p>
-              <input type="checkbox" id="remember" name="remember" />
-              <label for="remember">Remember Me</label>
-            </p>
-            <div class="inputBx">
-              <input type="submit" value="Login" />
+              <button type="button" class="account-create" href="#">
+                NEXT
+              </button>
             </div>
           </form>
-          <p>Forgot <a href="password.html">Password?</a></p>
+          <p>Forgot <a href="#">Email/Username?</a></p>
           <div class="seperator">
             <span class="text-seperator">or</span>
           </div>
           <div class="inputBx">
-            <button type="button" class="account-create" href="#">
-              CREATE ACCOUNT
+            <button type="button" class="return" href="index.html">
+              Return to Grocer login
             </button>
           </div>
         </div>
