updated password.html styles

--- a/password.html
+++ b/password.html
@@ -37,9 +37,7 @@
               <i class="fas fa-envelope"></i>
             </div>
             <div class="inputBx">
-              <button type="button" class="account-create" href="#">
-                NEXT
-              </button>
+              <a class="next" href="#">NEXT</a>
             </div>
           </form>
           <p>Forgot <a href="#">Email/Username?</a></p>
@@ -47,9 +45,7 @@
             <span class="text-seperator">or</span>
           </div>
           <div class="inputBx">
-            <button type="button" class="return" href="index.html">
-              Return to Grocer login
-            </button>
+            <a class="return" href="index.html">Return to Grocer login</a>
           </div>
         </div>
       </div>
