updated password.html styles

--- a/password.html
+++ b/password.html
@@ -40,7 +40,7 @@
               <a class="next" href="#">NEXT</a>
             </div>
           </form>
-          <p>Forgot <a href="#">Email/Username?</a></p>
+          <p class="forgot">Forgot <a href="#">Email/Username?</a></p>
           <div class="seperator">
             <span class="text-seperator">or</span>
           </div>
