updated index.html styles

--- a/index.html
+++ b/index.html
@@ -49,9 +49,7 @@
             <span class="text-seperator">or</span>
           </div>
           <div class="inputBx">
-            <button type="button" class="account-create" href="#">
-              CREATE ACCOUNT
-            </button>
+            <a class="account-create" href="account.html"> CREATE ACCOUNT </a>
           </div>
         </div>
       </div>
