created questionare section

--- a/account.html
+++ b/account.html
@@ -26,23 +26,20 @@
     <section id="main">
       <div class="input-box">
         <div class="form-box">
-          <h2>Sign-in</h2>
+          <h2>CREATE AN ACCOUNT</h2>
           <form id="login" action="#" method="POST">
-            <div class="inputBx">
-              <input type="text" autofocus placeholder="Username" />
-              <i class="fas fa-user"></i>
-            </div>
-            <div class="inputBx">
-              <input type="text" placeholder="Password" />
-              <i class="fas fa-lock"></i>
-            </div>
             <p>
-              <input type="checkbox" id="remember" name="remember" />
-              <label for="remember">Remember Me</label>
+              <input type="radio" id="apple" name="fruit" checked />
+              <label for="apple">Apple</label>
             </p>
-            <div class="inputBx">
-              <input type="submit" value="Login" />
-            </div>
+            <p>
+              <input type="radio" id="pear" name="fruit" />
+              <label for="pear">Pear</label>
+            </p>
+            <p>
+              <input type="radio" id="Orange" name="fruit" />
+              <label for="orange">Orange</label>
+            </p>
           </form>
           <p>Forgot <a href="password.html">Password?</a></p>
           <div class="seperator">
